[package]
name = "typesize"
description = "A library to fetch an accurate estimate of the total memory usage of a value."
repository = "https://github.com/GnomedDev/typesize"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
hashbrown = { version = "0.14.2", optional = true, default-features = false }
halfbrown = { version = "0.2.4", default-features = false, optional = true }
simd-json = { version = "0.13", default-features = false, optional = true }
arrayvec = { version = "0.7.4", default-features = false, optional = true }
chrono = { version = "0.4.31", default-features = false, optional = true }
dashmap = { version = "5.5.3", features = ["raw-api"], optional = true }
time = { version = "0.3.30", default-features = false, optional = true }
url = { version = "2.4", default-features = false, optional = true }
secrecy = { version = "0.8.0", optional = true }
serde_json = { version = "1", optional = true }
typesize-derive = { path = "typesize-derive" }

[features]
arrayvec = ["dep:arrayvec", "halfbrown?/arraybackend"]
simd_json = ["dep:simd-json", "halfbrown"]
halfbrown = ["dep:halfbrown", "hashbrown"]
dashmap = ["dep:dashmap", "hashbrown"]
serde_json = ["dep:serde_json"]
hashbrown = ["dep:hashbrown"]
secrecy = ["dep:secrecy"]
chrono = ["dep:chrono"]
time = ["dep:time"]
url = ["dep:url"]

[package.metadata.docs.rs]
all-features = true
