[package]
name = "typesize-derive"
description = "Internal proc-macro crate for typesize"
repository = "https://github.com/GnomedDev/typesize"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
either = "1.9.0"
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = "2.0.39"

[lib]
proc-macro = true
